@@ -1,0 +1,39 @@
+/***************************************************************************
+ *   Copyright (C) 2010 by Blade_Arma                                      *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ *   This program is distributed in the hope that it will be useful,       *
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
+ *   GNU General Public License for more details.                          *
+ *                                                                         *
+ *   You should have received a copy of the GNU General Public License     *
+ *   along with this program; if not, write to the                         *
+ *   Free Software Foundation, Inc.,                                       *
+ *   51 Franklin Street, Fifth Floor, Boston, MA 02111-1307 USA.           *
+ ***************************************************************************/
+
+#ifndef _SETTINGS_H_
+#define _SETTINGS_H_
+
+/******************************************************************************/
+
+typedef struct Settings
+{
+    long player;
+    char ip[32];
+    unsigned short port;
+} Settings;
+
+/******************************************************************************/
+
+void settingsRead();
+void settingsWrite();
+
+/******************************************************************************/
+
+#endif // _SETTINGS_H_
